--- a/package.json
+++ b/package.json
@@ -17,21 +17,24 @@
   "version": "0.0.0",
   "devDependencies": {
     "@ai-sdk/openai": "^1.1.9",
-    "@cloudflare/workers-types": "^4.20250129.0",
-    "@types/node": "^22.13.0",
+    "@cloudflare/vite-plugin": "^0.0.7",
+    "@cloudflare/workers-types": "^4.20250204.0",
+    "@types/node": "^22.13.1",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "ai": "^4.1.16",
-    "partyserver": "^0.0.62",
+    "@vitejs/plugin-react": "^4.3.4",
+    "ai": "^4.1.34",
+    "partyserver": "^0.0.63",
     "partysocket": "^1.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "typescript": "^5.7.3",
-    "workers-ai-provider": "^0.0.10",
-    "wrangler": "^3.107.2",
+    "vite": "^6.1.0",
+    "workers-ai-provider": "^0.0.11",
+    "wrangler": "^3.108.0",
     "zod": "^3.24.1"
   },
   "overrides": {
-    "esbuild": "^0.24.1"
+    "esbuild": "^0.25.0"
   }
 }
