feat: add comprehensive logging system for agents
Add a structured logging system with configurable log levels,  context support, and error details. Integrate logging with the Agent class for better debugging and monitoring capabilities.

--- a/packages/agents/package.json
+++ b/packages/agents/package.json
@@ -36,6 +36,11 @@
       "types": "./dist/ai-chat-agent.d.ts",
       "require": "./dist/ai-chat-agent.js",
       "import": "./dist/ai-chat-agent.js"
+    },
+    "./logging": {
+      "types": "./dist/logging.d.ts",
+      "require": "./dist/logging.js",
+      "import": "./dist/logging.js"
     }
   },
   "keywords": [],
